--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,14 @@ jobs:
         os: [ubuntu-latest, macos-13, macos-14, windows-2022]
         features: [default, buildtime_bindgen, bundled]
         include:
-          - target: [ mysql, mariadb ]
+          - target: mysql
             os: windows-2022
             install: vcpkg
-            features: [ buildtime_bindgen, bundled ]
+            features: buildtime_bindgen
+          - target: mariadb
+            os: windows-2022
+            install: vcpkg
+            features: buildtime_bindgen
         exclude:
           - target: mariadb
             features: bundled
