--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -209,7 +209,7 @@ jobs:
           cargo new test_diesel
           cd test_diesel
           echo "[workspace]" >> Cargo.toml
-          cargo add diesel --no-default-features --features "mysql" --git "https://github.com/diesel-rs/diesel/" --branch "master"
+          cargo add diesel --no-default-features --features "mysql" --git "https://github.com/diesel-rs/diesel/" --branch "2.2.x"
           cargo add mysqlclient-sys
           echo "[patch.crates-io]" >> Cargo.toml
           echo "mysqlclient-sys = { path = \"..\" }" >> Cargo.toml
